[package]
name = "radio"
version = "0.1.0"
authors = ["David Ricciardi <nricciar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.16.2" }
yew-router = "0.13.0"
wasm-bindgen = "0.2"
ham-rs = { git = "https://github.com/nricciar/ham-rs", branch = "pre-release" }
anyhow = "1"
js-sys = "0.3"
uuid = { version = "0.8", features = ["serde", "v4","wasm-bindgen"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
chrono = { version = "0.4.11", features = ["serde","wasmbind","js-sys"] }
adif = { git = "https://github.com/davepacheco/rust-adif.git" }
wasm-bindgen-futures = "0.4.18"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'MessageEvent',
  'OfflineAudioContext',
  'AnalyserNode',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]